# pdf-generator

./: .gitignore  README.md  pyproject.toml
src/: main.py  xlsx_converter.py
